syntax = "proto3";

option csharp_namespace = "Lab2";

package broker;


message PacketFrameMessage {
  string topic_name = 1;
  string message_content = 2;
}

message Subscription {
  string subscriber_name = 1;
  string topic_name = 2;
}

message ResponseMessage {bool success = 1;}	

service BrokerService {
  rpc PublishMessage (PacketFrameMessage) returns (ResponseMessage);
  rpc Subscribe (Subscription) returns (stream PacketFrameMessage);
}
